Fixed create post button not being aligned

--- a/components/Explore/Explore.css
+++ b/components/Explore/Explore.css
@@ -20,7 +20,7 @@
     flex-direction: column;
     align-items: center;
     margin: 0px;
-    padding-top: calc(2*var(--reaction-img-size));
+    padding: 0px;
 }
 
 #explore-page .actions>*{
@@ -80,6 +80,7 @@
     flex-direction: column;
     gap: 50px;
     overflow: hidden;
+    padding-top: calc(2*var(--reaction-img-size));
     overflow-y: scroll;
 }
 
